--- a/app/templates/admin/adminManageVenue.html
+++ b/app/templates/admin/adminManageVenue.html
@@ -45,7 +45,7 @@
             <div class="form-middle">
                 <label>Level</label>
                 <select name="venueFloor" required>
-                    <option value="" disabled selected>Venue Level</option>
+                    <option value="" disabled selected>Level</option>
                     <option value="LEVEL 2">LEVEL 2</option>
                     <option value="LEVEL 3">LEVEL 3</option>
                     <option value="LEVEL 4">LEVEL 4</option>
@@ -88,7 +88,7 @@
             <div class="form-middle">   
                 <label>Level (Editable)</label>
                 <select name="venueLevel" id="editVenueLevel" required>
-                    <option value="" disabled selected>Venue LEVEL</option>
+                    <option value="" disabled selected>Level</option>
                     <option value="LEVEL 2">LEVEL 2</option>
                     <option value="LEVEL 3">LEVEL 3</option>
                     <option value="LEVEL 4">LEVEL 4</option>
