--- a/app/templates/admin/adminManageVenue.html
+++ b/app/templates/admin/adminManageVenue.html
@@ -16,9 +16,9 @@
 
             <!-- Overview -->
             <div class="dashboard-row">
-                <div class="dashboard-frame pie">
+                <div class="dashboard-frame">
                     <h3>Venues by Floor</h3>
-                    <canvas id="venueFloorPieChart" width="300" height="150"></canvas>
+                    <canvas id="venueFloorPieChart" width="400" height="150"></canvas>
                 </div>
                 <div class="dashboard-frame">
                     <h3>Total Venues</h3>
