--- a/app/templates/admin/adminManageVenue.html
+++ b/app/templates/admin/adminManageVenue.html
@@ -18,7 +18,7 @@
             <div class="dashboard-row">
                 <div class="dashboard-frame">
                     <h3>Venues by Floor</h3>
-                    <canvas id="venueFloorPieChart" width="400" height="150"></canvas>
+                    <canvas id="venueFloorPieChart"></canvas>
                 </div>
                 <div class="dashboard-frame">
                     <h3>Total Venues</h3>
