--- a/app/templates/admin/adminManageVenue.html
+++ b/app/templates/admin/adminManageVenue.html
@@ -244,8 +244,8 @@
                 label: "Venues by Capacity",
                 data: capacityCounts,
                 fill: false,
-                borderColor: '#36A2EB',
-                backgroundColor: '#1E88E5',
+                borderColor: '#ac36eb',
+                backgroundColor: '#74017a',
                 tension: 0.2, // curve smoothness
                 pointRadius: 5,
                 pointBackgroundColor: '#FF6384'
