--- a/app/templates/admin/adminManageVenue.html
+++ b/app/templates/admin/adminManageVenue.html
@@ -241,8 +241,10 @@
         data: {
             labels: capacityLabels,
             datasets: [{
+                label: "Venues by Capacity",
                 data: capacityCounts,
                 fill: false,
+                borderColor: '#ac36eb',
                 tension: 0.2, // curve smoothness
                 pointRadius: 5,
                 pointBackgroundColor: '#FF6384'
