--- a/app/templates/admin/adminManageVenue.html
+++ b/app/templates/admin/adminManageVenue.html
@@ -15,12 +15,12 @@
         <div class="form-left" style="width: 100%">
 
             <!-- Overview -->
-            <div class="dashboard-row">
-                <div class="dashboard-frame">
-                    <h3>Venues by Floor</h3>
+            <div class="dashboard-row" style="grid-template-columns: 1fr 1fr 1fr;">
+                <div class="dashboard-frame pie">
+                    <h3>Venues by Floor</h3>    
                     <canvas id="venueFloorPieChart"></canvas>
                 </div>
-                <div class="dashboard-frame">
+                <div class="dashboard-frame pie">
                     <h3>Venues by Capacity</h3>
                     <canvas id="venueCapacityChart"></canvas>
                 </div>
