--- a/app/templates/admin/adminManageCourse.html
+++ b/app/templates/admin/adminManageCourse.html
@@ -176,7 +176,7 @@
                 <input type="number" id="editCourseStudents" name="courseStudent" min="1" step="1" value="{{ course_select.courseStudent if course_select else '' }}" required><br>
 
                 <label>Course Status</label>
-                <select id="editcourseStatus" name="courseStatus" required>
+                <select id="editCourseStatus" name="courseStatus" required>
                     <option value="" disabled selected>Select Status</option>
                     <option value="1">Activated</option>   <!-- True -->
                     <option value="0">Deactivated</option> <!-- False -->
